# routes/userRoutes.ts
@@ -7,6 +7,6 @@ const router = Router();
 router.use(authenticate);
 router.get('/me', userController.getCurrentUser);
 router.patch('/me', userController.updateCurrentUser);
-router.delete('/me', userController.closeCurrentUser);
+router.delete('/me', userController.deleteCurrentUser);
 
 export default router;
